--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Chasse au Trésor de Mendy</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Chasse au trésor de Mendy</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenue dans la chasse au trésor de Mendy 💖</h1>
-    <p>Prépare-toi à une aventure pleine de surprises, d’énigmes et d’amour !</p>
-    <script src="script.js"></script>
+  <h1>Bienvenue dans ta chasse au trésor, Mendy 💖</h1>
+  <p>Appuie sur ton cœur pour commencer l’aventure !</p>
+  <a href="etape1.html">❤️ Commencer</a>
+  <script src="script.js"></script>
 </body>
 </html>
